[project]
name = "bwpcarddiy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.9.1",
    "pyqt6-fluent-widgets>=1.8.6",
]

[[tool.uv.index]]
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true
